--- a/templates/index.html
+++ b/templates/index.html
@@ -57,6 +57,8 @@
             background-color: #004080;
         }
     </style>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9663195242901586"
+    crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
