--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Playlist Form</title>
+
+    <title>y2s</title>
+    <link rel="icon" type="image/x-icon" href="/templates/images/ico.ico">
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -91,6 +93,7 @@
 
     <footer>
         <p>&copy; 2024 YouTube to Spotify Playlist</p>
+        <p>&copy; Kasmik Regmi</p>
     </footer>
 </body>
 </html>
