--- a/templates/index.html
+++ b/templates/index.html
@@ -64,7 +64,7 @@
 </head>
 <body>
     <header>
-        <h1>Playlist Form</h1>
+        <h1>Convert Youtube Playlist to Spotify Playlist</h1>
     </header>
 
     <main>
@@ -76,7 +76,7 @@
                 <input type="text" name="des" required><br>
                 <label for="id">YouTube Playlist Url:</label>
                 <input type="text" name="id" required><br>
-                <button type="submit">Submit</button>
+                <button type="submit">Create</button>
             </form>
         </section>
 
@@ -92,7 +92,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2024 YouTube to Spotify Playlist</p>
+        <p>&copy; y2splaylist</p>
         <p>&copy; Kasmik Regmi</p>
     </footer>
 </body>
