expirement commit(for hosting)

--- a/templates/index.html
+++ b/templates/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <title>y2s</title>
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9663195242901586"
-     crossorigin="anonymous"></script>     
+    <!-- <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9663195242901586"
+     crossorigin="anonymous"></script>      -->
     <style>
         body {
             font-family: Arial, sans-serif;
