--- a/templates/index.html
+++ b/templates/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <title>y2s</title>
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9663195242901586"
-     crossorigin="anonymous"></script>     
+    <!-- <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9663195242901586"
+     crossorigin="anonymous"></script>      -->
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -69,6 +69,20 @@
 
     <main>
         <section>
+            <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9663195242901586"
+            crossorigin="anonymous"></script>
+            <!-- first -->
+            <ins class="adsbygoogle"
+            style="display:block"
+            data-ad-client="ca-pub-9663195242901586"
+            data-ad-slot="9147593598"
+            data-ad-format="auto"
+            data-full-width-responsive="true"></ins>
+            <script>
+            (adsbygoogle = window.adsbygoogle || []).push({});
+            </script>
+        </section>
+        <section>
             <form id="playlist-form" action="{{ url_for('main.home') }}" method="post">
                 <label for="name">Playlist Name:</label>
                 <input type="text" name="name" required><br>
@@ -91,6 +105,19 @@
         </section>
     </main>
 
+
+    <section>
+        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9663195242901586"
+     crossorigin="anonymous"></script>
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-format="autorelaxed"
+     data-ad-client="ca-pub-9663195242901586"
+     data-ad-slot="4825205209"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+    </section>
     <footer>
         <p>&copy; y2splaylist</p>
         <p>&copy; Kasmik Regmi</p>
